--- a/packages.config
+++ b/packages.config
@@ -17,25 +17,42 @@
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.Data.Sqlite" version="1.1.0" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.Sqlite" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.1.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="Newtonsoft.Json.Schema" version="2.0.11" targetFramework="net462" />
   <package id="Portable.BouncyCastle" version="1.8.1.1" targetFramework="net462" />
+  <package id="Remotion.Linq" version="2.1.1" targetFramework="net462" />
   <package id="S2Geometry" version="1.0.3" targetFramework="net462" />
   <package id="Selenium.Support" version="3.4.0" targetFramework="net462" />
   <package id="Selenium.WebDriver" version="3.4.0" targetFramework="net462" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.29.0" targetFramework="net462" />
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="net462" />
+  <package id="SQLite" version="3.13.0" targetFramework="net462" />
   <package id="SuperSocket" version="1.6.6.1" targetFramework="net462" />
   <package id="SuperSocket.Engine" version="1.6.6.1" targetFramework="net462" />
   <package id="SuperSocket.WebSocket" version="1.6.6.1" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
+  <package id="System.Collections.Immutable" version="1.3.0" targetFramework="net462" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="net462" />
   <package id="System.Console" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net462" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net462" />
@@ -48,6 +65,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
+  <package id="System.Linq.Queryable" version="4.0.1" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net462" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net462" />
@@ -57,6 +75,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net462" />
