--- a/packages.config
+++ b/packages.config
@@ -15,6 +15,7 @@
   <package id="GPSOAuthSharp.NetStandard1" version="1.0.1" targetFramework="net462" />
   <package id="LiteDB" version="3.1.0" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
+  <package id="Markdig" version="0.11.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.Data.Sqlite" version="1.1.0" targetFramework="net462" />
