--- a/packages.config
+++ b/packages.config
@@ -43,16 +43,18 @@
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="net462" />
   <package id="SQLite" version="3.13.0" targetFramework="net462" />
   <package id="SuperSocket" version="1.6.6.1" targetFramework="net462" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.13" targetFramework="net462" />
   <package id="SuperSocket.Engine" version="1.6.6.1" targetFramework="net462" />
   <package id="SuperSocket.WebSocket" version="1.6.6.1" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
-  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net462" />
+  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net462" />
+  <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net462" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net462" />
   <package id="System.Console" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net462" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net462" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net462" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net462" />
@@ -67,7 +69,9 @@
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net462" />
+  <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net462" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Net.Security" version="4.3.1" targetFramework="net462" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net462" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
@@ -75,7 +79,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net462" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net462" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net462" />
@@ -95,7 +99,7 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
   <package id="Telegram.Bot" version="13.2.1" targetFramework="net462" />
   <package id="TinyIoC" version="1.3" targetFramework="net462" developmentDependency="true" />
-  <package id="WebSocket4Net" version="0.14.1" targetFramework="net462" />
+  <package id="WebSocket4Net" version="0.15.0" targetFramework="net462" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net462" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net462" />
 </packages>
